--- a/.jshintrc
+++ b/.jshintrc
@@ -1,26 +1,42 @@
 {
-	"globals": {
-		"console": true,
-		"jQuery": true,
-		"JsDiff": true,
-		"Hogan": true,
-		"QUnit": true,
-		"mw": true,
-		"mwMobileFrontendConfig": true,
+	/* Common */
 
-		"strictEqual": true,
-		"deepEqual": true,
-		"ok": true,
-		"sinon": true
-	},
-
-	"browser": true,
+	// Enforcing
+	"camelcase": true,
 	"curly": true,
 	"eqeqeq": true,
-	"forin": false,
-	"onevar": true,
+	"immed": true,
+	"latedef": true,
+	"newcap": true,
+	"noarg": true,
+	"noempty": true,
+	"nonew": true,
+	"quotmark": "single",
 	"trailing": true,
-	"undef" : true,
+	"undef": true,
 	"unused": true,
-	"supernew": true
+	// Legacy
+	"onevar": true,
+
+	/* Local */
+
+	// Enforcing
+	"bitwise": true,
+	"forin": false,
+	"regexp": false,
+	"strict": false,
+	// Relaxing
+	"laxbreak": true,
+	"smarttabs": true,
+	"multistr": true,
+	// Environment
+	"browser": true,
+	// Legacy
+	"nomen": true,
+
+	"predef": [
+		"mediaWiki",
+		"jQuery",
+		"QUnit"
+	]
 }
